dex/ingress_service_backup_LB.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-09-24T14:00:48Z"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/version: 0.35.0
    helm.sh/chart: ingress-nginx-3.3.0
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: controller
    operation: Update
    time: "2020-09-25T10:45:30Z"
  name: ingress-nginx-controller
  namespace: default
  resourceVersion: "19848253"
  selfLink: /api/v1/namespaces/default/services/ingress-nginx-controller
  uid: a4bbd5fe-6e57-4d43-bd88-03e601c9c098
spec:
  clusterIP: 10.109.131.147
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 31704
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 31348
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 120.22.15.70
